tests/success/MutuallyRecursiveType.vix
data A = A1 | A2 B
data B = B1 | B2 (Ptr A)
