tests/type-error/InfiniteType-Tricky.vix
type A = A1 int | A2 int int | A3 int int B int int | A4 int int int int
type B = B1 int | B2 int int | B3 int int A int int | B4 int int int int
